Use TrimWhitespaceFormatter() instead of internal "trim()"